Dev/modules/network/07_routes.tf
# Public RT: routes 0.0.0.0/0 → IGW
resource "aws_route" "public_internet" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = var.destination_cidr_block
  gateway_id             = aws_internet_gateway.main.id
}

# Private RT: routes 0.0.0.0/0 → NAT GW
resource "aws_route" "private_outbound_1" {
  route_table_id         = aws_route_table.private_az1.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.az1.id
}

# Private RT: routes 0.0.0.0/0 → NAT GW
resource "aws_route" "private_outbound_2" {
  route_table_id         = aws_route_table.private_az2.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.az2.id
}
